Admin features, able to view products and orders

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@emotion/css": "^11.0.0",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.11.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,8 +19,10 @@
     "@types/uuid": "^8.3.0",
     "firebase": "^8.1.1",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-paypal-button-v2": "^2.6.2",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
     "uuid": "^8.3.1",
