--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jquery": "^3.5.4",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.6",
     "@types/uuid": "^8.3.0",
     "firebase": "^8.1.1",
     "jquery": "^3.5.1",
@@ -23,6 +24,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-paypal-button-v2": "^2.6.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
     "uuid": "^8.3.1",
