--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-paypal-button-v2": "^2.6.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "svelte": "^3.31.0",
     "typescript": "^4.0.3",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
